# linalg_sparse_orthogonal

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  Makefile  README.md  sparse.pc.in
.github/workflows/: ci.yml  macos-ci.yml  windows-ci.yml
archive/: README.md  sparse_lu_orthogonal.c  sparse_lu_orthogonal_complete_pivoring_mm_with_errors.c  sparse_lu_orthogonal_complete_pivoting_mm_full.c  sparse_lu_orthogonal_complete_pivoting_mm_with_unit_tests.c  sparse_lu_orthogonal_with_pool_nnz_mem_io.c  sparse_lu_orthogonal_with_pool_nnz_mem_io_mm.c  sparse_lu_with_pool_and_nnz.c
benchmarks/: README.md  bench_amd_qg.c  bench_bicgstab.c  bench_chol_csc.c  bench_colamd.c  bench_convergence.c  bench_eigs.c  bench_fillin.c  bench_ldlt_csc.c  bench_main.c  bench_refactor.c  bench_refactor_csc.c  bench_reorder.c  bench_scaling.c  bench_svd.c
cmake/: SparseConfig.cmake.in
docs/: algorithm.md  matrix_market.md  tutorial.md
docs/planning/EPIC_1/: PROJECT_PLAN.md
docs/planning/EPIC_1/SPRINT_1/: DAILY_LOG.md  PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_1/SPRINT_10/: PLAN.md
docs/planning/EPIC_1/SPRINT_2/: PLAN.md  benchmark_results.md
docs/planning/EPIC_1/SPRINT_3/: PLAN.md
docs/planning/EPIC_1/SPRINT_4/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_1/SPRINT_5/: PLAN.md
docs/planning/EPIC_1/SPRINT_6/: PLAN.md
docs/planning/EPIC_1/SPRINT_7/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_1/SPRINT_8/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_1/SPRINT_9/: PLAN.md  PROFILE_RESULTS.md
docs/planning/EPIC_1/reviews/: initial-review.md
docs/planning/EPIC_2/: EPIC_2_RETROSPECTIVE.md  PROJECT_PLAN.md
docs/planning/EPIC_2/SPRINT_11/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_12/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_13/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_14/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_15/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_16/: PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_17/: PERF_NOTES.md  PLAN.md  RETROSPECTIVE.md
docs/planning/EPIC_2/SPRINT_18/: PLAN.md  RETROSPECTIVE.md  bench_day12.txt  bench_day14.txt
docs/planning/EPIC_2/SPRINT_19/: PLAN.md  RETROSPECTIVE.md  bench_day14.txt  bench_day2_refactor.txt  bench_day3_small_corpus.txt  bench_day7_post_kuu.txt  bench_day9_row_adj.txt  kuu_fix_decision.md  profile_day5_kuu.txt
docs/planning/EPIC_2/SPRINT_20/: PLAN.md  RETROSPECTIVE.md  bench_day13_lanczos.txt  bench_day3_indefinite.txt  bench_day6_dispatch.txt  bench_day9_reorth.txt
docs/planning/EPIC_2/SPRINT_21/: PLAN.md  RETROSPECTIVE.md  bench_day14.txt  bench_day14_compare.txt  bench_day4_restart.txt  bench_day5_omp.txt  bench_day6_omp_scaling.txt
docs/planning/EPIC_2/SPRINT_22/: PERF_NOTES.md  PLAN.md  RETROSPECTIVE.md  bench_day13_amd_qg.csv  bench_day13_amd_qg.txt  bench_day14.csv  bench_day14.txt  bench_day9_nd.csv  bench_day9_nd.txt
docs/planning/EPIC_2/SPRINT_23/: PLAN.md  RETROSPECTIVE.md  bench_day10_fm_buckets.txt  bench_day12.csv  bench_day12.txt  bench_day12_amd_qg.csv  bench_day12_amd_qg.txt  (+8 more)
docs/planning/EPIC_3/: PROJECT_PLAN.md
examples/: README.md  example_analysis.c  example_basic_solve.c  example_colamd.c  example_condition.c  example_eigs.c  example_ic_minres.c  example_iterative.c  example_ldlt.c  example_least_squares.c  example_matrix_free.c  example_minnorm.c  example_svd_lowrank.c
examples/cmake_example/: CMakeLists.txt  main.c
include/: sparse_analysis.h  sparse_bidiag.h  sparse_cholesky.h  sparse_csr.h  sparse_dense.h  sparse_eigs.h  sparse_ic.h  sparse_ilu.h  sparse_iterative.h  sparse_ldlt.h  sparse_lu.h  sparse_lu_csr.h  sparse_matrix.h  sparse_qr.h  sparse_reorder.h  sparse_svd.h  sparse_types.h  sparse_vector.h  sparse_version.h  sparse_version.h.in
planning/: PROJECT_PLAN.md
planning/SPRINT_1/: DAILY_LOG.md  PLAN.md
planning/SPRINT_10/: PLAN.md  RETROSPECTIVE.md
planning/SPRINT_2/: PLAN.md  RETROSPECTIVE.md
planning/SPRINT_3/: PLAN.md  RETROSPECTIVE.md  benchmark_results.md
planning/SPRINT_4/: PLAN.md
planning/SPRINT_5/: PLAN.md  RETROSPECTIVE.md  benchmark_results.md
planning/SPRINT_6/: PLAN.md  RETROSPECTIVE.md
planning/SPRINT_7/: PLAN.md
planning/SPRINT_8/: PLAN.md
planning/SPRINT_9/: PLAN.md  RETROSPECTIVE.md
planning/reviews/: initial-review.md
scripts/: ci.sh  deadcode_report.py  deadcode_workflow.sh  download_matrices.sh  epic3_warning_workflow.sh  wall_check.sh
src/: sparse_analysis.c  sparse_analysis_internal.h  sparse_bicgstab_internal.h  sparse_bidiag.c  sparse_chol_csc.c  sparse_chol_csc_internal.h  sparse_cholesky.c  sparse_colamd.c  sparse_colamd_internal.h  sparse_csr.c  sparse_dense.c  sparse_eigs.c  sparse_eigs_internal.h  sparse_errno_internal.h  sparse_etree.c  sparse_graph.c  sparse_graph_fm_buckets.h  sparse_graph_internal.h  sparse_ic.c  sparse_ilu.c  sparse_iterative.c  sparse_ldlt.c  sparse_ldlt_csc.c  sparse_ldlt_csc_internal.h  sparse_lu.c  sparse_lu_csr.c  sparse_matrix.c  sparse_matrix_internal.h  sparse_qr.c  sparse_reorder.c  sparse_reorder_amd_qg.c  sparse_reorder_amd_qg_internal.h  sparse_reorder_nd.c  sparse_reorder_nd_internal.h  sparse_svd.c  sparse_svd_internal.h  sparse_types.c  sparse_vector.c
tests/: smoke_test.c  test_bicgstab.c  test_bidiag.c  test_block_solvers.c  test_chol_csc.c  test_cholesky.c  test_cmake_install.sh  test_colamd.c  test_csr.c  test_dense.c  test_edge_cases.c  test_eigs.c  test_eigs_lobpcg.c  test_eigs_thick_restart.c  test_etree.c  test_framework.h  test_framework_optin.c  test_fuzz.c  test_graph.c  test_graph_fm_buckets.c  test_ic.c  test_ilu.c  test_install.sh  test_integration.c  test_iterative.c  test_known_matrices.c  test_ldlt.c  test_ldlt_csc.c  test_lu_csr.c  test_matmul.c  test_minres.c  test_omp.c  test_qr.c  test_reorder.c  test_reorder_amd_qg.c  test_reorder_nd.c  test_sparse_arith.c  test_sparse_io.c  test_sparse_lu.c  test_sparse_matrix.c  (+18 more)
tests/data/: bad_header.mtx  bcsstk01.mtx  diagonal_10.mtx  identity_5.mtx  pattern_3.mtx  symmetric_4.mtx  tridiagonal_20.mtx  unsymm_5.mtx
(+339 files in other folders)
